--- a/YTFrontend.html
+++ b/YTFrontend.html
@@ -2,55 +2,49 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Watch Together</title>
 <style>
-  body { margin:0; font-family: Arial, sans-serif; background:#111; color:#fff; display:flex; flex-direction:column; min-height:100vh; }
-  header { background:#000; padding:1rem 2rem; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.5);}
-  header h1 { font-size:2rem; }
-
-  .search-bar { margin:1rem auto; display:flex; max-width:600px; width:90%; }
-  .search-bar input { flex:1; padding:0.6rem 1rem; font-size:1rem; border:none; border-radius:5px 0 0 5px; outline:none; }
-  .search-bar button { padding:0.6rem 1rem; font-size:1rem; border:none; background:#e50914; color:#fff; cursor:pointer; border-radius:0 5px 5px 0; transition:background 0.2s;}
-  .search-bar button:hover { background:#f6121d; }
-
-  .iframe-container { flex:1; display:flex; justify-content:center; align-items:center; margin:1rem 2rem; }
-  iframe { width:80%; max-width:1000px; height:600px; border:none; border-radius:10px; box-shadow:0 10px 30px rgba(0,0,0,0.7);}
-  
-  footer { text-align:center; padding:1rem; background:#000; font-size:0.9rem; color:#aaa; }
-  a { color:#e50914; text-decoration:none; }
-
-  @media (max-width:768px) { iframe { width:95%; height:400px; } }
+  html,body{
+    margin:0;
+    padding:0;
+    height:100%;
+    background:#0b0b0b;
+    color:white;
+    font-family:system-ui,Segoe UI,Roboto;
+  }
+  .app{
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 64px 1fr;
+    height:100%;
+  }
+  header{
+    display:flex;
+    align-items:center;
+    padding:0 20px;
+    background:#111;
+    border-bottom:1px solid #222;
+    font-weight:600;
+    letter-spacing:.5px;
+  }
+  iframe{
+    width:100%;
+    height:100%;
+    border:none;
+    background:black;
+  }
 </style>
 </head>
 <body>
 
-<header>
-  <h1>Watch Together</h1>
-</header>
+<div class="app">
+  <header>🎬 Watch Together</header>
 
-<div class="search-bar">
-  <input type="text" id="searchInput" placeholder="Search videos...">
-  <button onclick="searchVideo()">Search</button>
+  <iframe
+    src="https://old-haze-95dd.gblood016.workers.dev/?url=https://invidious.nerdvpn.de/search?q=juice%20wrld"
+    allow="autoplay; fullscreen">
+  </iframe>
 </div>
-
-<div class="iframe-container">
-  <!-- Default search results -->
-  <iframe id="searchFrame" src="https://invidious.nerdvpn.de/.within.website/?redir=/search?q=juice%20wrld"></iframe>
-</div>
-
-<footer>
-  Powered by Invidious • <a href="https://invidious.nerdvpn.de/" target="_blank">Visit Invidious</a>
-</footer>
-
-<script>
-function searchVideo() {
-  const query = document.getElementById('searchInput').value.trim();
-  if(!query) return;
-  const frame = document.getElementById('searchFrame');
-  frame.src = `https://invidious.nerdvpn.de/.within.website/?redir=/search?q=${encodeURIComponent(query)}`;
-}
-</script>
 
 </body>
 </html>
