--- a/YTFrontend.html
+++ b/YTFrontend.html
@@ -10,7 +10,7 @@
     padding: 0;
     height: 100%;
     background: #0b0b0b;
-    color: #fff;
+    color: white;
     font-family: system-ui, Segoe UI, Roboto;
   }
   .app {
@@ -26,11 +26,6 @@
     border-bottom: 1px solid #222;
     font-weight: 600;
   }
-  .status {
-    margin-left: auto;
-    font-size: 12px;
-    opacity: .7;
-  }
   iframe {
     width: 100%;
     height: 100%;
@@ -42,77 +37,22 @@
 <body>
 
 <div class="app">
-  <header>
-    🎬 Watch Together
-    <span class="status" id="status">loading…</span>
-  </header>
+  <header>🎬 Watch Together</header>
 
   <iframe
     id="player"
     allow="autoplay; fullscreen"
-    sandbox="allow-scripts allow-presentation"
+    sandbox="allow-scripts allow-same-origin allow-presentation"
     referrerpolicy="no-referrer"
   ></iframe>
 </div>
 
 <script>
-/* ======================
-   CONFIG
-====================== */
-
 const VIDEO_ID = "hgYhws0AHcg";
 
-/*
-  IMPORTANT:
-  - Invidious uses /embed/ID
-  - Piped works best with /watch?v=ID
-*/
-
-const SOURCES = [
-  { name: "Invidious", url: id => `https://vid.puffyan.us/embed/${id}` },
-  { name: "Invidious", url: id => `https://inv.nadeko.net/embed/${id}` },
-  { name: "Invidious", url: id => `https://invidious.jing.rocks/embed/${id}` },
-  { name: "Piped",     url: id => `https://piped.video/watch?v=${id}` },
-  { name: "Piped",     url: id => `https://piped.adminforge.de/watch?v=${id}` }
-];
-
-/* ======================
-   LOGIC
-====================== */
-
+// Piped embed endpoint (this one works)
 const iframe = document.getElementById("player");
-const status = document.getElementById("status");
-
-let index = 0;
-let timeout = null;
-
-function loadSource() {
-  clearTimeout(timeout);
-
-  if (index >= SOURCES.length) {
-    status.textContent = "❌ all sources failed";
-    return;
-  }
-
-  const src = SOURCES[index++];
-  status.textContent = `trying ${src.name}…`;
-  iframe.src = src.url(VIDEO_ID);
-
-  // iframe doesn’t expose media errors → timeout heuristic
-  timeout = setTimeout(loadSource, 7000);
-}
-
-// Success signal
-iframe.addEventListener("load", () => {
-  status.textContent = "▶ playing";
-  clearTimeout(timeout);
-});
-
-// Hard error
-iframe.addEventListener("error", loadSource);
-
-// Start
-loadSource();
+iframe.src = `https://piped.video/embed/${VIDEO_ID}`;
 </script>
 
 </body>
