--- a/YTFrontend.html
+++ b/YTFrontend.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Watch Together - External Embeds</title>
+<title>Watch Together - Secure</title>
 <style>
 body{margin:0;padding:0;background:#111;color:#fff;font-family:sans-serif;}
 #container{max-width:900px;margin:auto;padding:1rem;}
@@ -25,10 +25,11 @@ iframe{width:95%;height:50vh;margin:1rem auto;display:block;border:none;border-r
 <button id="nextBtn">Next</button>
 </div>
 <div id="queue"></div>
-<iframe id="player" allowfullscreen allow="autoplay" sandbox="allow-scripts allow-popups" referrerpolicy="no-referrer"></iframe>
+<iframe id="player" allowfullscreen sandbox="allow-scripts allow-popups allow-same-origin"></iframe>
 </div>
 
-<script src="https://unpkg.com/peerjs@1.5.4/dist/peerjs.min.js"></script>
+<!-- Local PeerJS bundle -->
+<script src="libs/peerjs.min.js"></script>
 <script>
 const EMBED="https://invidious.nerdvpn.de/watch/";
 const qDiv=document.getElementById("queue"), player=document.getElementById("player"), input=document.getElementById("videoInput");
@@ -51,12 +52,20 @@ const extractID=url=>{
   }catch(e){return url.trim();}
 };
 
-const renderQueue=()=>{qDiv.innerHTML="";queue.forEach((v,i)=>{const d=document.createElement("div");d.className="queue-item";d.innerHTML=`<span>${i+1}. ${v}</span><span class="queue-remove">✕</span>`;d.onclick=()=>playVideo(i);d.querySelector(".queue-remove").onclick=e=>{e.stopPropagation();removeVideo(i)};qDiv.appendChild(d);});};
+// ===== QUEUE RENDER =====
+const renderQueue=()=>{qDiv.innerHTML="";queue.forEach((v,i)=>{
+  const d=document.createElement("div"); d.className="queue-item";
+  d.innerHTML=`<span>${i+1}. ${v}</span><span class="queue-remove">✕</span>`;
+  d.onclick=()=>playVideo(i);
+  d.querySelector(".queue-remove").onclick=e=>{e.stopPropagation();removeVideo(i)};
+  qDiv.appendChild(d);
+});};
 
 // ===== QUEUE CONTROLS =====
 const addVideo=()=>{
   const id=extractID(input.value.trim());if(!id)return;
-  queue.push(id);renderQueue();broadcast({type:"queue",payload:id});if(current===-1)playVideo(0);input.value="";
+  queue.push(id);renderQueue();broadcast({type:"queue",payload:id});
+  if(current===-1)playVideo(0);input.value="";
 };
 const removeVideo=i=>{
   if(i<0||i>=queue.length)return;
@@ -78,7 +87,11 @@ peer.on("open",id=>{
   else{conn=peer.connect(hostID);conn.on("open",()=>console.log("Connected"));conn.on("data",handleMsg);}
 });
 const broadcast=msg=>{if(conn&&conn.open)conn.send(msg);};
-const handleMsg=({type,payload})=>{switch(type){case"queue":queue.push(payload);renderQueue();break;case"remove":queue.splice(payload,1);renderQueue();break;case"play":playVideo(payload);break;}};
+const handleMsg=({type,payload})=>{switch(type){
+  case"queue":queue.push(payload);renderQueue();break;
+  case"remove":queue.splice(payload,1);renderQueue();break;
+  case"play":playVideo(payload);break;
+}};
 
 // ===== EVENTS =====
 input.addEventListener("keypress",e=>{if(e.key==="Enter")addVideo();});
